<resources>
    <string name="app_name">Martin Trujillo</string>
    <string name="login_btn_entrar">Entrar</string>
    <string name="aniadir">Añadir</string>
    <string name="coche">Coche</string>
    <string name="horas_de_trabajo">Horas de trabajo</string>
    <string name="estado">Estado</string>
    <string name="motivo">Motivo de la reparación</string>
    <string name="fecha_entrada">Fecha Entrada</string>
    <string name="fecha_salida">Fecha Salida</string>
    <string name="reparacion1">Reparación 1</string>
    <string name="reparacion2">Reparación 2</string>
    <string name="reparacion3">Reparación 3</string>
    <string name="reparacion4">Reparación 4</string>
    <string name="reparacion5">Reparación 5</string>
    <string name="reparacion6">Reparación 6</string>
    <string name="reparacion7">Reparación 7</string>
    <string name="reparacion8">Reparación 8</string>
    <string name="reparacion9">Reparación 9</string>
    <string name="reparacion10">Reparación 10</string>
    <string name="nombre">Nombre</string>
    <string name="dni">DNI</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="siguiente">Siguiente</string>
    <string name="motivo_de_la_reparaicion">MOTIVO DE LA REPARAICION</string>
    <string name="finalizar">Finalizar</string>
    <string name="asignar_piezas">Asignar Piezas</string>
    <string name="asignar_mecanico">Asignar Mecanico</string>
    <string name="meter_coche_en_el_garaje">Meter coche en el garaje</string>
    <string name="matricula">Matricula</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="imagen">Imagen</string>
    <string name="descripcion_de_la_reparacion">Descripción de la reparación</string>
    <string name="meter_en_el_garaje">Meter en el garaje</string>
    <string name="datos_usuario">Datos Usuario</string>
    <string name="datos_reparacion">Datos reparación</string>
    <string name="sacar_del_garaje">SACAR DEL GARAJE</string>
    <string name="asignar_horas">Agregar horas</string>
    <string name="login">LOGIN</string>
</resources>